Support dark_theme in collapsible sections, fix readme_close, add SHIFT+ENTER hint.

--- a/PunchCardFirefoxOs/css/section_expander.css
+++ b/PunchCardFirefoxOs/css/section_expander.css
@@ -1,9 +1,4 @@
 
-section {
-    background-color: white;
-    color: black;
-}
-
 /* input[type=checkbox] */
 
 #cb1 {
@@ -33,7 +28,6 @@ section {
 }
 
 #cb1 + label>h1 {
-    background-color: white;
     margin: 0;
     font-size: 1.2rem;
     position: sticky;
